--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "book-commerce",
+  "name": "starter-bt5",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "apexcharts": "3.41.0",
+    "axios": "^1.7.3",
+    "bootstrap": "5.3.0",
+    "bootstrap-icons": "1.10.5",
+    "history": "5.3.0",
+    "node-sass": "9.0.0",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.12.1",
+    "reactstrap": "^9.2.0",
+    "sass": "1.63.2",
+    "web-vitals": "3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "7.22.5",
+    "react-scripts": "5.0.1"
+  },
+  "overrides": {
+    "nth-check": "2.1.1"
   }
 }
